enumcapsulate/tests/expand-macros/into_variant/fail/enum/tuple_variants/zero_fields.err.txt
error: proc-macro derive panicked
 --> /tests/expand-macros/into_variant/fail/enum/tuple_variants/zero_fields.rs:5:10
  |
5 | #[derive(IntoVariant)]
  |          ^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("Only enums with single-element tuple variants can use this derive")
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
